# vulkan-demo

./: .clang-format  CMakeLists.txt  main.cpp  vcpkg.json
shaders/: CMakeLists.txt  triangle.frag.glsl  triangle.vert.glsl  triangle_red.frag.glsl  triangle_red.vert.glsl
src/: vk_engine.cpp  vk_engine.hpp  vk_init.cpp  vk_init.hpp  vk_types.cpp  vk_types.hpp
vk_engine/: vk_engine.hpp
